k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weartrack
  labels:
    app: weartrack
  annotations:
    kube-score/ignore: deployment-replicas,container-security-context-user-group-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weartrack
  template:
    metadata:
      labels:
        app: weartrack
    spec:
      nodeSelector:
        kubernetes.io/hostname: ${K8S_NODE_HOSTNAME}
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
      imagePullSecrets:
        - name: ${K8S_IMAGE_PULL_SECRET_NAME}
      containers:
        - name: weartrack
          image: ${CI_REGISTRY_IMAGE}:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 100Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 500Mi
      volumes:
        - name: data
          hostPath:
            path: /storage/ssd/services/weartrack
            type: DirectoryOrCreate
        - name: tmp
          emptyDir: {}
