k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weartrack
  labels:
    app: weartrack
spec:
  selector:
    app: weartrack
  ports:
    - port: 3000
      targetPort: 3000
