k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weartrack
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "${K8S_INGRESS_AUTH_MIDDLEWARE}"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "${K8S_INGRESS_HOST}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weartrack
                port:
                  number: 3000
  tls:
    - hosts:
        - "${K8S_INGRESS_HOST}"
